...
                        fontFamily = PlusJakartaSans,
                        color = onBg,
                        letterSpacing = 0.5.sp,
                    )
                    Spacer(modifier = Modifier.height(6.dp))
                    Text(
                        text = "Войдите в аккаунт",
                        fontSize = 14.sp,
                        fontFamily = PlusJakartaSans,
                        color = onSurfVar,
                    )
                }
            }
...
